--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ footer{
     text-align: center;
 }
 #footer-heading{
-    color: brown;
+    color: rgb(222, 118, 118);
 }
 #footer-para{
     color: white;
